easiware: same style for embedded dashboard

--- a/client/app/assets/less/redash/query.less
+++ b/client/app/assets/less/redash/query.less
@@ -92,6 +92,11 @@ body.fixed-layout {
   flex-flow: column;
   height: calc(~'100vh - 25px');
 
+  // Custom Easiware
+  border: 1px solid #d2d2d2;
+  border-radius: 4px;
+  box-shadow: none;
+
   > .embed-heading {
     flex: 0 0 auto;
   }
