--- a/client/app/pages/dashboards/PublicDashboardPage.less
+++ b/client/app/pages/dashboards/PublicDashboardPage.less
@@ -21,4 +21,21 @@
     height: 95px;
     text-align: center;
   }
+
+  // Custom Easiware
+
+  .dashboard-wrapper {
+    margin-bottom: 0;
+  }
+
+  .widget-visualization {
+    border: 1px solid #d2d2d2;
+    border-radius: 4px;
+    box-shadow: none;
+  }
+
+  .query-link {
+    font-size: 12px !important;
+    font-weight: 400 !important;
+  }
 }
