easiware: hide orgid parameter in public dashboard filters

--- a/client/app/pages/dashboards/PublicDashboardPage.less
+++ b/client/app/pages/dashboards/PublicDashboardPage.less
@@ -38,4 +38,9 @@
     font-size: 12px !important;
     font-weight: 400 !important;
   }
+
+  // Cache le filtre dashboard dédié au choix des organisations.
+  .parameter-block[data-test="ParameterBlock-ORGID"] {
+    display: none !important;
+  }
 }
