--- a/client/app/pages/dashboards/PublicDashboardPage.less
+++ b/client/app/pages/dashboards/PublicDashboardPage.less
@@ -20,15 +20,23 @@
   .public-dashboard-refreshButton {
     margin: 0 0 1rem auto;
     border-radius: 4px;
-    width: 16px;
+    width: auto;
     height: 16px;
     text-align: center;
     padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
   }
 
 
   .public-dashboard-refreshButton:hover {
     background-color: #ffeb99;
+  }
+
+  .public-dashboard-label {
+    margin-bottom: 0;
   }
 
   #footer {
