--- a/client/app/components/dynamic-parameters/DynamicButton.less
+++ b/client/app/components/dynamic-parameters/DynamicButton.less
@@ -27,10 +27,10 @@
 }
 
 .dynamic-menu {
-  width: 187px;
+  width: 265px;
 
   em {
-    color: #ccc;
+    color: #bbb;
     font-size: 11px;
   }
 }
